--- a/task-4.html
+++ b/task-4.html
@@ -5,19 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 4</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="./css/task-4.css" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
     <form class="login-form">
-      <label>
+      <label class="form-label">
         Email
-        <input type="email" name="email" />
+        <input class="form-input" type="email" name="email" />
       </label>
-      <label>
+      <label class="form-label">
         Password
-        <input type="password" name="password" />
+        <input class="form-input" type="password" name="password" />
       </label>
       <button type="submit">Login</button>
     </form>
