--- a/task-4.html
+++ b/task-4.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/common.css" />
@@ -26,7 +26,7 @@
         Password
         <input class="form-input" type="password" name="password" />
       </label>
-      <button type="submit">Login</button>
+      <button class="form-btn" type="submit">Login</button>
     </form>
 
     <script src="./js/task-4.js" type="module"></script>
